fixed stuff and better detect stuff

--- a/theme.css
+++ b/theme.css
@@ -1,4 +1,4 @@
-h1, h2{
+h1, h2, .center{
   -webkit-touch-callout: none; /* iOS Safari */
   -webkit-user-select: none; /* Safari */
   -khtml-user-select: none; /* Konqueror HTML */
